--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-router-dom": "^6.22.3",
     "react-table": "^7.8.0",
     "recharts": "^2.12.6",
+    "redback-frontend-web-template": "file:",
     "styled-components": "^6.1.8",
     "xlsx": "^0.18.5"
   },
@@ -66,6 +67,6 @@
     "jsdom": "^24.0.0",
     "react-magnetic-di": "^3.1.2",
     "typescript": "^5.2.2",
-    "vite": "^5.1.6"
+    "vite": "^5.4.19"
   }
 }
