--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.4",
     "dayjs": "^1.11.13",
     "papaparse": "^5.4.1",
