--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/styled-components": "^5.1.34",
     "chart.js": "^4.4.9",
     "dayjs": "^1.11.13",
+    "firebase": "^12.1.0",
     "papaparse": "^5.4.1",
     "polished": "^4.3.1",
     "react": "^18.2.0",
