--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,74 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# --- General ---
+.DS_Store
+Thumbs.db
+*.log
+*.tmp
+*.swp
+*.swo
+
+# --- Git ---
+.git/
+.gitignore
+
+# --- Environment Secrets ---
+.env
+.env.*
+!.env.example
+
+# --- Node / React ---
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-lock.yaml
+package-lock.json
+coverage/
+build/
+dist/
+.cache/
+.next/
+out/
+
+# --- Python / Flask ---
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.egg-info/
+.eggs/
+.venv/
+venv/
+env/
+instance/
+.pytest_cache/
+.mypy_cache/
+*.sqlite*
+*.db
+*.db-journal
+
+# --- Frontend Specific ---
+frontend/.env
+frontend/node_modules/
+frontend/build/
+frontend/dist/
+
+# --- Certificates / Keys / Secrets ---
+*.pem
+*.key
+*.crt
+*.p12
+*.keystore
+*.jks
+
+# --- IDE / Editor ---
+.vscode/
+.idea/
+*.iml
+
+# --- System / OS ---
+Icon?
+ehthumbs.db
