--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Logs
 logs
 *.log
 npm-debug.log*
@@ -7,54 +6,44 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+node_modules/
+dist/
+dist-ssr/
+build/
+.cache/
+.next/
+out/
+coverage/
+
 *.local
 
-# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
+Thumbs.db
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-# --- General ---
-.DS_Store
-Thumbs.db
-*.log
-*.tmp
 *.swp
 *.swo
+Icon?
+ehthumbs.db
 
-# --- Git ---
-.git/
-.gitignore
-
-# --- Environment Secrets ---
 .env
+.env.local
 .env.*
 !.env.example
 
-# --- Node / React ---
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-lock.yaml
-package-lock.json
-coverage/
-build/
-dist/
-.cache/
-.next/
-out/
+*.pem
+*.key
+*.crt
+*.p12
+*.keystore
+*.jks
 
-# --- Python / Flask ---
 __pycache__/
 *.py[cod]
 *.pyo
@@ -71,25 +60,7 @@ instance/
 *.db
 *.db-journal
 
-# --- Frontend Specific ---
 frontend/.env
 frontend/node_modules/
 frontend/build/
 frontend/dist/
-
-# --- Certificates / Keys / Secrets ---
-*.pem
-*.key
-*.crt
-*.p12
-*.keystore
-*.jks
-
-# --- IDE / Editor ---
-.vscode/
-.idea/
-*.iml
-
-# --- System / OS ---
-Icon?
-ehthumbs.db
